--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact || Qutiiz || Qutiiz HTML Template For Business</title>
+    <title>Contact || IPness || IPness HTML Template For Business</title>
     <!-- favicons Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="../assets/images/favicons/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="../assets/images/favicons/favicon-32x32.png" />
@@ -92,7 +92,7 @@
                                     <ul>
                                         
                                         <li><a href="services2.html">Services</a></li>
-                                        <li><a href="mobile-applications.html">Mobile Applications </a></li>
+                                        <li><a href="mobile-applications.html">IoTs </a></li>
                                         <li><a href="digital-marketing.html">Digital Marketings </a></li>
                                         <li><a href="graphic-design.html">Graphic Designing </a></li>
                                         <li><a href="website-development.html">Website Developments </a></li>
@@ -130,7 +130,7 @@
                             </div>
                             <div class="main-menu-wrapper__call-number">
                                 <p>Call Anytime</p>
-                                <h5><a href="tel:926668880000">92 666 888 0000</a></h5>
+                                <h5><a href="tel:926668880000">+1 689 267 3697</a></h5>
                             </div>
                         </div>
                     </div>
@@ -180,8 +180,8 @@
                                 <span class="icon-conversation"></span>
                             </div>
                             <h3 class="contact-info__title">About</h3>
-                            <p class="contact-info__text">Lorem ipsum is simply free text dolor sit amet, conse ullam
-                                blandit.</p>
+                            <p class="contact-info__text">We are team of highly skilled and experienced IT professionals who are well-versed in various aspects of information technology.
+                                This expertise can be beneficial in providing comprehensive IT solutions, technical support, and consulting services to meet your business needs.</p>
                         </div>
                     </div>
                     <div class="col-xl-4 col-lg-4 wow fadeInUp" data-wow-delay="200ms">
@@ -191,8 +191,8 @@
                                 <span class="icon-address"></span>
                             </div>
                             <h3 class="contact-info__title">address</h3>
-                            <p class="contact-info__text">60 broklyn golden street, New york. United States of America
-                            </p>
+                            <p class="contact-info__text">Mankessim station roundAbout C/R
+                                Kumasi station A/R Africa
                         </div>
                     </div>
                     <div class="col-xl-4 col-lg-4 wow fadeInUp" data-wow-delay="300ms">
@@ -203,9 +203,9 @@
                             </div>
                             <h3 class="contact-info__title">contact</h3>
                             <h4>
-                                <a href="mailto:needhelp@company.com" class="contact-info__mail">needhelp@company.com
+                                <a href="mailto:needhelp@company.com" class="contact-info__mail">info@ipness-one.com
                                 </a>
-                                <a href="tel:926668880000" class="contact-info__phone">92 666 888 0000</a>
+                                <a href="tel:926668880000" class="contact-info__phone">+1 689 267 3697</a>
                             </h4>
                         </div>
                     </div>
@@ -284,7 +284,7 @@
                             </div>
                             <div class="site-footer__top-title-box">
                                 <h3 class="site-footer__top-title">Let's work together just drop me a line - <a
-                                        href="mailto:info@example.com">info@example.com</a></h3>
+                                        href="mailto:info@example.com">info@ipness-one.com</a></h3>
                             </div>
                         </div>
                         <div class="site-footer__top-right">
@@ -317,7 +317,7 @@
                                                 <i class="fas fa-phone-square-alt"></i>
                                             </div>
                                             <div class="text">
-                                                <a href="tel:926668880000">+32-(046) 006-8898</a>
+                                                <a href="tel:926668880000">+1 689 267 3697</a>
                                             </div>
                                         </li>
                                         <li>
@@ -325,7 +325,7 @@
                                                 <i class="fas fa-envelope"></i>
                                             </div>
                                             <div class="text">
-                                                <a href="mailto:needhelp@company.com">needhelp@company.com</a>
+                                                <a href="mailto:needhelp@company.com">info@ipness-one.com</a>
                                             </div>
                                         </li>
                                         <li>
@@ -390,7 +390,7 @@
                                 <div class="site-footer__bottom-inner">
                                     <div class="site-footer__bottom-left">
                                         <p class="site-footer__bottom-text">© Copyrights, 2021 <a
-                                                href="#">BracketWeb</a></p>
+                                                href="#">IPness Ltd.</a></p>
                                     </div>
                                     <div class="site-footer__bottom-right">
                                         <ul class="list-unstyled site-footer__bottom-menu">
@@ -428,11 +428,11 @@
             <ul class="mobile-nav__contact list-unstyled">
                 <li>
                     <i class="fa fa-envelope"></i>
-                    <a href="mailto:needhelp@packageName__.com">needhelp@qutiiz.com</a>
+                    <a href="mailto:needhelp@packageName__.com">info@ipness-one.com</a>
                 </li>
                 <li>
                     <i class="fa fa-phone-alt"></i>
-                    <a href="tel:666-888-0000">666 888 0000</a>
+                    <a href="tel:666-888-0000">+1 689 267 3697</a>
                 </li>
             </ul><!-- /.mobile-nav__contact -->
             <div class="mobile-nav__top">
