--- a/pages/contact.html
+++ b/pages/contact.html
@@ -181,7 +181,7 @@
                             </div>
                             <h3 class="contact-info__title">About</h3>
                             <p class="contact-info__text">We are team of highly skilled and experienced IT professionals who are well-versed in various aspects of information technology.
-                                This expertise can be beneficial in providing comprehensive IT solutions, technical support, and consulting services to meet your business needs.</p>
+                            </p>
                         </div>
                     </div>
                     <div class="col-xl-4 col-lg-4 wow fadeInUp" data-wow-delay="200ms">
@@ -308,8 +308,8 @@
                                 <div class="footer-widget__column footer-widget__about">
                                     <h3 class="footer-widget__title">About</h3>
                                     <div class="footer-widget__about-text-box">
-                                        <p class="footer-widget__about-text">Lorem ipsum dolor sit amet, consect etur
-                                            adi pisicing elit sed do eiusmod.</p>
+                                        <p class="footer-widget__about-text">We are team of highly skilled and experienced IT professionals who are well-versed in various aspects of information technology.
+                                            This expertise can be beneficial in providing comprehensive IT solutions, technical support, and consulting services to meet your business needs.</p>
                                     </div>
                                     <ul class="footer-widget__about-contact list-unstyled">
                                         <li>
@@ -333,7 +333,8 @@
                                                 <i class="fas fa-map-marker-alt"></i>
                                             </div>
                                             <div class="text">
-                                                <p>66 Broklyn Street New York, USA</p>
+                                                <p>Mankessim station roundAbout C/R
+                                                    Kumasi station A/R Africa</p>
                                             </div>
                                         </li>
                                     </ul>
