--- a/index.html
+++ b/index.html
@@ -474,10 +474,10 @@
                     <div class="col-xl-12">
                         <ul class="project-filter style1 post-filter has-dynamic-filters-counter list-unstyled">
                             <li data-filter=".filter-item" class="active"><span class="filter-text">All</span></li>
-                            <li data-filter=".bra"><span class="filter-text">Branding</span></li>
-                            <li data-filter=".photo"><span class="filter-text">Photography</span></li>
+                            <li data-filter=".bra"><span class="filter-text">IoTs</span></li>
+                            <li data-filter=".photo"><span class="filter-text">Networking</span></li>
                             <li data-filter=".web"><span class="filter-text">Web Design</span></li>
-                            <li data-filter=".app"><span class="filter-text last-pd-none">Apps</span></li>
+                            <li data-filter=".app"><span class="filter-text last-pd-none">Cloud Infrastructure</span></li>
                         </ul>
                     </div>
                 </div>
