--- a/pages/team-details.html
+++ b/pages/team-details.html
@@ -91,12 +91,12 @@
                                     <a href="#">Services</a>
                                     <ul>
                                         <li><a href="services2.html">Services</a></li>
-                                        <li><a href="mobile-applications.html">Mobile Applications </a></li>
+                                        <li><a href="mobile-applications.html">IoTs </a></li>
                                         <li><a href="digital-marketing.html">Networking & Cloud Infrastructure </a></li>
                                         <li><a href="graphic-design.html">Graphic Designing </a></li>
                                         <li><a href="website-development.html">Website Developments </a></li>
                                         <li><a href="social-marketing.html">Social Marketings </a></li>
-                                        <li><a href="cyberSecurity.html">CyberSecurity  </a></li>
+                                        <li><a href="cyberSecurity.html">CyberSecurity </a></li>
                                     </ul>
                                 </li>
                                 <li class="dropdown">
