--- a/pages/team-details.html
+++ b/pages/team-details.html
@@ -197,7 +197,7 @@
 									As the CEO and founder of IPness Company, a cutting-edge technology company that specializes in providing innovative IT solutions. 
 									With a deep passion for technology and a keen understanding of market trends, I have been instrumental in driving the success of IPness Company. I have a proven track record of creating and implementing groundbreaking IT solutions that have revolutionized the way businesses operate.
 									Their forward-thinking approach and ability to anticipate future technological advancements have enabled IPness to stay ahead of the competition and deliver cutting-edge solutions to its clients.
-                                    <p class="team-details__top-text-3">IPNESS "THINK DIFFERENT"
+                                    <p class="team-details__top-text-3">IPness "THINK DIFFERENT"
 								</p>
                                 </div>
                             </div>
