--- a/pages/team-details.html
+++ b/pages/team-details.html
@@ -183,7 +183,7 @@
                         <div class="col-xl-6">
                             <div class="team-details__top-right">
                                 <div class="team-details__top-content">
-                                    <p class="team-details__top-title">IP Network Security & CyberSecurity</p>
+                                    <p class="team-details__top-title">IP Network Security & CyberSecurity Engineer</p>
                                     <h3 class="team-details__top-name">Founder & CEO Prince Sam</h3>
                                     <div class="team-details__social">
                                         <a href="#"><i class="fab fa-twitter"></i></a>
