--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                                     <a href="#">Services</a>
                                     <ul>
                                         <li><a href="./pages/services2.html">Services</a></li>
-                                        <li><a href="./pages/mobile-applications.html">Mobile Applications</a></li>
+                                        <li><a href="./pages/mobile-applications.html">IoTs</a></li>
                                         <li><a href="./pages/digital-marketing.html">Networking & Cloud Infrastructure</a></li>
                                         <li><a href="./pages/graphic-design.html">Graphic Designing</a></li>
                                         <li><a href="./pages/website-development.html">Website Developments</a></li>
