--- a/pages/CyberSecurity.html
+++ b/pages/CyberSecurity.html
@@ -93,8 +93,8 @@
 									<ul>
 										
 										<li><a href="services2.html">Services</a></li>
-										<li><a href="mobile-applications.html">Mobile Applications </a></li>
-										<li><a href="digital-marketing.html">Digital Marketings </a></li>
+										<li><a href="mobile-applications.html">IoTs </a></li>
+										<li><a href="digital-marketing.html">Networking & Cloud Infrastructure</a></li>
 										<li><a href="graphic-design.html">Graphic Designing </a></li>
 										<li><a href="website-development.html">Website Developments </a></li>
 										<li><a href="social-marketing.html">Social Marketings </a></li>
@@ -131,7 +131,7 @@
 							</div>
 							<div class="main-menu-wrapper__call-number">
 								<p>Call Anytime</p>
-								<h5><a href="tel:926668880000">971 52 807 9091</a></h5>
+								<h5><a href="tel:926668880000">+1 689 267 3697</a></h5>
 							</div>
 						</div>
 					</div>
@@ -165,7 +165,7 @@
 						<li><a href="services.html">Services</a></li>
 						<li class="active">services Details</li>
 					</ul>
-					<h2>Content Writtings</h2>
+					<h2>CyberSecurity</h2>
 				</div>
 			</div>
 		</section>
@@ -179,9 +179,9 @@
 						<div class="service-details__sidebar">
 							<div class="service-details__sidebar-service">
 								<ul class="service-details__sidebar-service-list list-unstyled">
-									<li><a href="mobile-applications.html">Mobile Applications <span
+									<li><a href="mobile-applications.html">IoTs<span
 												class="icon-right-arrow"></span></a></li>
-									<li><a href="digital-marketing.html">Digital Marketings <span
+									<li><a href="digital-marketing.html">Networking & Cloud Infrastructure<span
 												class="icon-right-arrow"></span></a></li>
 									<li><a href="graphic-design.html">Graphic Designings <span
 												class="icon-right-arrow"></span></a></li>
@@ -203,7 +203,7 @@
 								<h2 class="service-details__need-help-title">Best Quality <br> services</h2>
 								<div class="service-details__need-help-contact">
 									<p>Call us Anytime</p>
-									<a href="tel:926668880000">+ 971 52 807 9091</a>
+									<a href="tel:926668880000">+1 689 267 3697</a>
 								</div>
 							</div>
 							<div class="service-details__download">
@@ -217,7 +217,7 @@
 								<img src="../assets/images/resources/service-details-img-2.jpg" alt="">
 							</div>
 							<div class="service-details__content">
-								<h2 class="service-details__title">Content Writtings</h2>
+								<h2 class="service-details__title">CyberSecurity</h2>
 								<p class="service-details__text-1">It is a long established fact that a reader will be
 									distracted by the readable content of a page when looking at its layout. The point
 									of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,
@@ -404,7 +404,7 @@
 												<i class="fas fa-phone-square-alt"></i>
 											</div>
 											<div class="text">
-												<a href="tel:926668880000">971 52 807 9091</a>
+												<a href="tel:926668880000">+1 689 267 3697</a>
 											</div>
 										</li>
 										<li>
@@ -520,7 +520,7 @@
 				</li>
 				<li>
 					<i class="fa fa-phone-alt"></i>
-					<a href="tel:666-888-0000">971 52 807 9091</a>
+					<a href="tel:666-888-0000">+1 689 267 3697</a>
 				</li>
 			</ul><!-- /.mobile-nav__contact -->
 			<div class="mobile-nav__top">
