--- a/pages/mobile-applications.html
+++ b/pages/mobile-applications.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Mobile Applications || Service Details || IPness || IPness HTML Template For Business</title>
+	<title>IoTs || Service Details || IPness || IPness HTML Template For Business</title>
 	<!-- favicons Icons -->
 	<link rel="apple-touch-icon" sizes="180x180" href="../assets/images/favicons/apple-touch-icon.png" />
 	<link rel="icon" type="image/png" sizes="32x32" href="../assets/images/favicons/favicon-32x32.png" />
@@ -93,7 +93,7 @@
 									<ul>
 										 
 										<li><a href="services2.html">Services</a></li>
-										<li><a href="mobile-applications.html">Mobile Applications </a></li>
+										<li><a href="mobile-applications.html">IoTs</a></li>
 										<li><a href="digital-marketing.html">Networking & Cloud Infrastructure</a></li>
 										<li><a href="graphic-design.html">Graphic Designing </a></li>
 										<li><a href="website-development.html">Website Developments </a></li>
@@ -179,7 +179,7 @@
 						<div class="service-details__sidebar">
 							<div class="service-details__sidebar-service">
 								<ul class="service-details__sidebar-service-list list-unstyled">
-									<li><a href="mobile-applications.html">Mobile Applications <span
+									<li><a href="mobile-applications.html">IoTs<span
 												class="icon-right-arrow"></span></a></li>
 									<li><a href="digital-marketing.html">Networking & Cloud Infrastructure<span
 												class="icon-right-arrow"></span></a></li>
@@ -217,7 +217,7 @@
 								<img src="../assets/images/resources/service-details-img-5.jpg" alt="">
 							</div>
 							<div class="service-details__content">
-								<h2 class="service-details__title">Mobile Applications</h2>
+								<h2 class="service-details__title">IoTs</h2>
 								<p class="service-details__text-1">It is a long established fact that a reader will be
 									distracted by the readable content of a page when looking at its layout. The point
 									of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,
