pictures nad content editing

--- a/pages/digital-marketing.html
+++ b/pages/digital-marketing.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Digital Marketing || Service Details || IPness || IPness HTML Template For Business</title>
+	<title>Networking & Cloud Infrastructure|| Service Details || IPness || IPness HTML Template For Business</title>
 	<!-- favicons Icons -->
 	<link rel="apple-touch-icon" sizes="180x180" href="../assets/images/favicons/apple-touch-icon.png" />
 	<link rel="icon" type="image/png" sizes="32x32" href="../assets/images/favicons/favicon-32x32.png" />
@@ -165,7 +165,7 @@
 						<li><a href="services.html">Services</a></li>
 						<li class="active">services Details</li>
 					</ul>
-					<h2>Digital Marketing</h2>
+					<h2>Networking & Cloud Infrastructure</h2>
 				</div>
 			</div>
 		</section>
@@ -217,7 +217,7 @@
 								<img src="../assets/images/resources/service-details-img-3.jpg" alt="">
 							</div>
 							<div class="service-details__content">
-								<h2 class="service-details__title">Digital Marketing</h2>
+								<h2 class="service-details__title">Networking & Cloud Infrastructure</h2>
 								<p class="service-details__text-1">It is a long established fact that a reader will be
 									distracted by the readable content of a page when looking at its layout. The point
 									of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,
