--- a/pages/social-marketing.html
+++ b/pages/social-marketing.html
@@ -93,7 +93,7 @@
 									<ul>
 										 
 										<li><a href="services2.html">services</a></li>
-										<li><a href="mobile-applications.html">Mobile Applications </a></li>
+										<li><a href="mobile-applications.html">IoTs</a></li>
 										<li><a href="digital-marketing.html">Networking & Cloud Infrastructure </a></li>
 										<li><a href="graphic-design.html">Graphic Designing </a></li>
 										<li><a href="website-development.html">Website Developments </a></li>
@@ -179,7 +179,7 @@
 						<div class="service-details__sidebar">
 							<div class="service-details__sidebar-service">
 								<ul class="service-details__sidebar-service-list list-unstyled">
-									<li><a href="mobile-applications.html">Mobile Applications <span
+									<li><a href="mobile-applications.html">IoTs<span
 												class="icon-right-arrow"></span></a></li>
 									<li><a href="digital-marketing.html">Networking & Cloud Infrastructure<span
 												class="icon-right-arrow"></span></a></li>
