--- a/pages/about.html
+++ b/pages/about.html
@@ -91,7 +91,7 @@
                                     <a href="services2.html">Services</a>
                                     <ul>
                                         
-                                        <li><a href="mobile-applications.html">Mobile Applications </a></li>
+                                        <li><a href="mobile-applications.html">IoTs</a></li>
                                         <li><a href="digital-marketing.html">Networking & Cloud Infrastructure </a></li>
                                         <li><a href="graphic-design.html">Graphic Designings </a></li>
                                         <li><a href="website-development.html">Website Developments </a></li>
@@ -543,7 +543,7 @@
                                 </div>
                                 <div class="team-one__hover">
                                     <h4 class="team-one__hover-name">Armah Rockson</h4>
-                                    <p class="team-one__hover-title">IP Network Engineer</p>
+                                    <p class="team-one__hover-title">Lead IP Network Engineer</p>
                                     <div class="team-one__social">
                                         <a href="#"><i class="fab fa-twitter"></i></a>
                                         <a href="#"><i class="fab fa-facebook"></i></a>
