--- a/pages/project-details.html
+++ b/pages/project-details.html
@@ -92,7 +92,7 @@
                                     <ul>
                                          
                                         <li><a href="services2.html">Services</a></li>
-                                        <li><a href="mobile-applications.html">Mobile Applications </a></li>
+                                        <li><a href="mobile-applications.html">IoTs </a></li>
                                         <li><a href="digital-marketing.html">Networking & Cloud Infrastructure</a></li>
                                         <li><a href="graphic-design.html">Graphic Designing </a></li>
                                         <li><a href="website-development.html">Website Developments </a></li>
