--- a/pages/team.html
+++ b/pages/team.html
@@ -92,7 +92,7 @@
                                     <ul>
                                         <!-- <li><a href="services.html">Services</a></li>
                                         <li><a href="services2.html">Services Two</a></li> -->
-                                        <li><a href="mobile-applications.html">Mobile Applications </a></li>
+                                        <li><a href="mobile-applications.html">IoTs</a></li>
                                         <li><a href="digital-marketing.html">Networking & Cloud Infrastructure</a></li>
                                         <li><a href="graphic-design.html">Graphic Designings </a></li>
                                         <li><a href="website-development.html">Website Developments </a></li>
