--- a/pages/404.html
+++ b/pages/404.html
@@ -92,8 +92,8 @@
                                     <ul>
                                         
                                         <li><a href="services2.html">Services</a></li>
-                                        <li><a href="mobile-applications.html">Mobile Applications </a></li>
-                                        <li><a href="digital-marketing.html">Digital Marketings </a></li>
+                                        <li><a href="mobile-applications.html">IoTs</a></li>
+                                        <li><a href="digital-marketing.html">Networking & Cloud Infrastructure</a></li>
                                         <li><a href="graphic-design.html">Graphic Designings </a></li>
                                         <li><a href="website-development.html">Website Developments </a></li>
                                         <li><a href="social-marketing.html">Social Marketings </a></li>
@@ -130,7 +130,7 @@
                             </div>
                             <div class="main-menu-wrapper__call-number">
                                 <p>Call Anytime</p>
-                                <h5><a href="tel:926668880000">971 528 079 091</a></h5>
+                                <h5><a href="tel:926668880000">+1 689 267 3697</a></h5>
                             </div>
                         </div>
                     </div>
@@ -203,7 +203,7 @@
                             </div>
                             <div class="site-footer__top-title-box">
                                 <h3 class="site-footer__top-title">Let's work together just drop me a line - <a
-                                        href="mailto:info@example.com">info@example.com</a></h3>
+                                        href="mailto:info@example.com">info@ipness-one.com</a></h3>
                             </div>
                         </div>
                         <div class="site-footer__top-right">
@@ -227,8 +227,8 @@
                                 <div class="footer-widget__column footer-widget__about">
                                     <h3 class="footer-widget__title">About</h3>
                                     <div class="footer-widget__about-text-box">
-                                        <p class="footer-widget__about-text">Lorem ipsum dolor sit amet, consect etur
-                                            adi pisicing elit sed do eiusmod.</p>
+                                        <p class="footer-widget__about-text">We are team of highly skilled and experienced IT professionals who are well-versed in various aspects of information technology.
+											This expertise can be beneficial in providing comprehensive IT solutions, technical support, and consulting services to meet your business needs.</p>
                                     </div>
                                     <ul class="footer-widget__about-contact list-unstyled">
                                         <li>
@@ -236,7 +236,7 @@
                                                 <i class="fas fa-phone-square-alt"></i>
                                             </div>
                                             <div class="text">
-                                                <a href="tel:926668880000">+971-(052)807 9091 </a>
+                                                <a href="tel:926668880000">+1 689 267 3697</a>
                                             </div>
                                         </li>
                                         <li>
@@ -244,7 +244,7 @@
                                                 <i class="fas fa-envelope"></i>
                                             </div>
                                             <div class="text">
-                                                <a href="mailto:needhelp@company.com">needhelp@company.com</a>
+                                                <a href="mailto:needhelp@company.com">info@ipness-one.com</a>
                                             </div>
                                         </li>
                                         <li>
@@ -252,7 +252,8 @@
                                                 <i class="fas fa-map-marker-alt"></i>
                                             </div>
                                             <div class="text">
-                                                <p>66 Broklyn Street New York, USA</p>
+                                                <p>Mankessim station roundAbout C/R
+													Kumasi station A/R Africa</p>
                                             </div>
                                         </li>
                                     </ul>
@@ -309,7 +310,7 @@
                                 <div class="site-footer__bottom-inner">
                                     <div class="site-footer__bottom-left">
                                         <p class="site-footer__bottom-text">© Copyrights, 2021 <a
-                                                href="#">BracketWeb</a></p>
+                                                href="#">IPness Ltd.</a></p>
                                     </div>
                                     <div class="site-footer__bottom-right">
                                         <ul class="list-unstyled site-footer__bottom-menu">
@@ -347,11 +348,11 @@
             <ul class="mobile-nav__contact list-unstyled">
                 <li>
                     <i class="fa fa-envelope"></i>
-                    <a href="mailto:needhelp@packageName__.com">needhelp@qutiiz.com</a>
+                    <a href="mailto:needhelp@packageName__.com">info@ipness-one.com</a>
                 </li>
                 <li>
                     <i class="fa fa-phone-alt"></i>
-                    <a href="tel:666-888-0000">666 888 0000</a>
+                    <a href="tel:666-888-0000">+1 689 267 3697</a>
                 </li>
             </ul><!-- /.mobile-nav__contact -->
             <div class="mobile-nav__top">
