--- a/pages/digital-marketing.html
+++ b/pages/digital-marketing.html
@@ -218,19 +218,13 @@
 							</div>
 							<div class="service-details__content">
 								<h2 class="service-details__title">Networking & Cloud Infrastructure</h2>
-								<p class="service-details__text-1">It is a long established fact that a reader will be
-									distracted by the readable content of a page when looking at its layout. The point
-									of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,
-									as opposed to using 'Content here, content here', making it look like readable
-									English. Many desktop publishing packages and web page editors now use Lorem Ipsum
-									as their default model text, and a search for 'lorem ipsum' will uncover many web
-									sites still in their infancy.</p>
-								<p class="service-details__text-2">Lorem ipsum is simply free text dolor sit amet,
-									consectetur notted adipisicing elit sed do eiusmod tempor incididunt ut labo lonm
+								<p class="service-details__text-1">Networking Design Infrastructure as a Service (NDIaaS) is a cloud computing service model that provides organizations with a complete networking infrastructure 
+						          that is accessible over the internet. It offers a flexible and scalable solution to meet the networking needs of an organization without the need to invest in expensive hardware or hiring network engineers.</p>
+								<p class="service-details__text-2">NaaS offers a wide range of networking services such as virtual private networks (VPN), software-defined networking (SDN), network security, load balancing, and more. 
+									These services are typically provided by a third-party provider who manages and maintains the networking infrastructure.
 									andhn.</p>
-								<p class="service-details__text-3">Tincidunt elit magnis nulla facilisis sagittis sapien
-									nunc Many desktop publishing packages and web page editors amet ultrices dolores sit
-									ipsum velit purus aliquet massa fringilla leo orci. Sapien nunc amet ultrices.</p>
+								<p class="service-details__text-3">With NaaS, organizations can quickly and easily provision networking resources on demand, which can help to reduce operational costs and improve network performance. 
+									It also allows organizations to scale their networking infrastructure as needed without incurring additional costs for hardware or software.</p>
 							</div>
 							<div class="service-details__bottom">
 								<ul class="list-unstyled service-details__bottom-list">
