--- a/pages/mobile-applications.html
+++ b/pages/mobile-applications.html
@@ -218,19 +218,12 @@
 							</div>
 							<div class="service-details__content">
 								<h2 class="service-details__title">IoTs</h2>
-								<p class="service-details__text-1">It is a long established fact that a reader will be
-									distracted by the readable content of a page when looking at its layout. The point
-									of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,
-									as opposed to using 'Content here, content here', making it look like readable
-									English. Many desktop publishing packages and web page editors now use Lorem Ipsum
-									as their default model text, and a search for 'lorem ipsum' will uncover many web
-									sites still in their infancy.</p>
-								<p class="service-details__text-2">Lorem ipsum is simply free text dolor sit amet,
-									consectetur notted adipisicing elit sed do eiusmod tempor incididunt ut labo lonm
-									andhn.</p>
-								<p class="service-details__text-3">Tincidunt elit magnis nulla facilisis sagittis sapien
-									nunc Many desktop publishing packages and web page editors amet ultrices dolores sit
-									ipsum velit purus aliquet massa fringilla leo orci. Sapien nunc amet ultrices.</p>
+								<p class="service-details__text-1">IoT technology helps organizations and homes by increasing efficiency, automating tasks, 
+									reducing costs, improving customer experiences, enhancing safety and security, and enabling remote monitoring and control.</p>
+								<p class="service-details__text-2">IoT devices automate routine tasks and processes, improving efficiency, and reducing labor costs.
+									 For example, in an industrial setting, IoT sensors can monitor machine performance and alert technicians if there is a problem, </p>
+								<p class="service-details__text-3">IoT devices can help reduce energy consumption and waste, resulting in cost savings.
+									 For instance, smart thermostats can learn occupancy patterns and adjust heating and cooling accordingly, reducing energy waste.</p>
 							</div>
 							<div class="service-details__bottom">
 								<ul class="list-unstyled service-details__bottom-list">
@@ -265,15 +258,15 @@
 									<div class="col-xl-6">
 										<div class="service-details__benefits-content">
 											<h3 class="service-details__benefits-title">Our Benefits</h3>
-											<p class="service-details__benefits-text">Duis aute irure dolor in simply
-												free text exist on reprehende voluptate velit esse cillum.</p>
+											<p class="service-details__benefits-text">By providing IoT devices that improve the customer experience, 
+												companies can increase customer loyalty and retention.</p>
 											<ul class="list-unstyled service-details__benefits-list">
 												<li>
 													<div class="icon">
 														<span class="icon-draw-check-mark"></span>
 													</div>
 													<div class="text">
-														<p>Nsectetur cing elit</p>
+														<p>Revenue growth</p>
 													</div>
 												</li>
 												<li>
@@ -281,7 +274,7 @@
 														<span class="icon-draw-check-mark"></span>
 													</div>
 													<div class="text">
-														<p>Suspe ndisse suscip sagittis leo</p>
+														<p>Data collection and analysis</p>
 													</div>
 												</li>
 												<li>
@@ -289,7 +282,7 @@
 														<span class="icon-draw-check-mark"></span>
 													</div>
 													<div class="text">
-														<p>Entum estib dignissim posuere</p>
+														<p>Competitive advantage</p>
 													</div>
 												</li>
 												<li>
@@ -297,7 +290,7 @@
 														<span class="icon-draw-check-mark"></span>
 													</div>
 													<div class="text">
-														<p>If you are going to use a pass</p>
+														<p>Product innovation</p>
 													</div>
 												</li>
 											</ul>
