--- a/pages/services2.html
+++ b/pages/services2.html
@@ -186,10 +186,10 @@
                             </div>
                             <div class="services-three__single-content">
                                 <h2 class="services-three__title"><a href="website-development.html">Networking design<br>
-                         Infrastructure    
+                         Infrastructure (Naas)   
           </a></h2>
-                                <p class="services-three__text">Lorem ipsum dolor sit amet, consect etur adi pisicing
-                                    elit sed do dunt ut labore.</p>
+                                <p class="services-three__text">Networking Design Infrastructure as a Service (NDIaaS) is a cloud computing service model that 
+                                    provides organizations with a complete networking infrastructure that is accessible over the internet. </p>
                                 <a class="services-three__arrow" href="website-development.html"><span
                                         class="icon-right-arrow"></span></a>
                             </div>
@@ -209,7 +209,7 @@
                             </div>
                             <div class="services-three__single-content">
                                 <h2 class="services-three__title"><a href="website-development.html">Cloud  <br>design
-                               Infrastructure</a></h2>
+                               Infrastructure (Paas)</a></h2>
                                 <p class="services-three__text">Lorem ipsum dolor sit amet, consect etur adi pisicing
                                     elit sed do dunt ut labore.</p>
                                 <a class="services-three__arrow" href="website-development.html"><span
@@ -230,8 +230,8 @@
                                 </div>
                             </div>
                             <div class="services-three__single-content">
-                                <h2 class="services-three__title"><a href="website-development.html">Home & <br>
-                                        Organization Wi-Fi distribution</a></h2>
+                                <h2 class="services-three__title"><a href="website-development.html">Business & <br>
+                                        Home Wi-Fi</a></h2>
                                 <p class="services-three__text">Lorem ipsum dolor sit amet, consect etur adi pisicing
                                     elit sed do dunt ut labore.</p>
                                 <a class="services-three__arrow" href="website-development.html"><span
@@ -253,10 +253,10 @@
                                 </div>
                             </div>
                             <div class="services-three__single-content">
-                                <h2 class="services-three__title"><a href="website-development.html">effective social <br>
-                                        Media Marketing</a></h2>
-                                <p class="services-three__text">Lorem ipsum dolor sit amet, consect etur adi pisicing
-                                    elit sed do dunt ut labore.</p>
+                                <h2 class="services-three__title"><a href="website-development.html">Cctv Camera <br>
+                                    Surveillance Security</a></h2>
+                                <p class="services-three__text">IPNESS IT solution have a good reputation in the market for providing CCTV surveillance security
+                                     for homes and businesses</p>
                                 <a class="services-three__arrow" href="website-development.html"><span
                                         class="icon-right-arrow"></span></a>
                             </div>
@@ -275,7 +275,7 @@
                                 </div>
                             </div>
                             <div class="services-three__single-content">
-                                <h2 class="services-three__title"><a href="website-development.html">Web & App <br>
+                                <h2 class="services-three__title"><a href="website-development.html">Web<br>
                                         developments</a></h2>
                                 <p class="services-three__text">Our innovative custom design services will help your business stand out in the crowded online marketplace.
 								Our feature-rich, search engine-friendly designs are tailored to appeal to your target audience</p>
