--- a/pages/website-development.html
+++ b/pages/website-development.html
@@ -224,9 +224,8 @@
 the best web design company in Africa. Our innovative custom design services will help your business stand out in the crowded online marketplace.
  Our feature-rich, search engine-friendly designs are tailored to appeal to your target audience
 </p>
-								<p class="service-details__text-3">Tincidunt elit magnis nulla facilisis sagittis sapien
-									nunc Many desktop publishing packages and web page editors amet ultrices dolores sit
-									ipsum velit purus aliquet massa fringilla leo orci. Sapien nunc amet ultrices.</p>
+								<p class="service-details__text-3">A website can provide a platform for customers to interact with an organization.
+									 This can lead to increased customer engagement, loyalty, and trust.</p>
 							</div>
 							<div class="service-details__bottom">
 								<ul class="list-unstyled service-details__bottom-list">
