--- a/pages/CyberSecurity.html
+++ b/pages/CyberSecurity.html
@@ -218,19 +218,12 @@
 							</div>
 							<div class="service-details__content">
 								<h2 class="service-details__title">CyberSecurity</h2>
-								<p class="service-details__text-1">It is a long established fact that a reader will be
-									distracted by the readable content of a page when looking at its layout. The point
-									of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,
-									as opposed to using 'Content here, content here', making it look like readable
-									English. Many desktop publishing packages and web page editors now use Lorem Ipsum
-									as their default model text, and a search for 'lorem ipsum' will uncover many web
-									sites still in their infancy.</p>
-								<p class="service-details__text-2">Lorem ipsum is simply free text dolor sit amet,
-									consectetur notted adipisicing elit sed do eiusmod tempor incididunt ut labo lonm
-									andhn.</p>
-								<p class="service-details__text-3">Tincidunt elit magnis nulla facilisis sagittis sapien
-									nunc Many desktop publishing packages and web page editors amet ultrices dolores sit
-									ipsum velit purus aliquet massa fringilla leo orci. Sapien nunc amet ultrices.</p>
+								<p class="service-details__text-1">Organizations benefit from cybersecurity by protecting sensitive data, 
+									complying with regulations, preventing cyber attacks, maintaining business continuity, managing reputation, 
+									and saving costs associated with data breaches and other cyber incidents.</p>
+								<p class="service-details__text-2">Preventing cyber attacks and protecting sensitive data help organizations avoid costly data breaches and associated expenses,
+									 such as legal fees and reputational damage.</p>
+								<p class="service-details__text-3">A strong cybersecurity posture enhance an organization's reputation and instill confidence in customers, partners, and stakeholders.</p>
 							</div>
 							<div class="service-details__bottom">
 								<ul class="list-unstyled service-details__bottom-list">
@@ -238,24 +231,24 @@
 										<div class="service-details__bottom-icon">
 											<span class="icon-front-end"></span>
 											<h4 class="service-details__bottom-title">content & Structure</h4>
-											<p class="service-details__bottom-text">Duis aute irure dolor in repreh
-												enderit nulla voluptate velit.</p>
+											<p class="service-details__bottom-text">We always take a detailed description of the cybersecurity incident that occurred, including the timeline of events, 
+												the nature of the attack, and the scope of the impact.</p>
 										</div>
 									</li>
 									<li class="service-details__bottom-single">
 										<div class="service-details__bottom-icon">
 											<span class="icon-investigation"></span>
 											<h4 class="service-details__bottom-title">Analysis & Planning</h4>
-											<p class="service-details__bottom-text">Duis aute irure dolor in repreh
-												enderit nulla voluptate velit.</p>
+											<p class="service-details__bottom-text">We identify all the assets an organization needs to protect, evaluate the risks and threats to those assets, 
+												and assess the effectiveness of current security controls.</p>
 										</div>
 									</li>
 									<li class="service-details__bottom-single">
 										<div class="service-details__bottom-icon">
 											<span class="icon-increment"></span>
 											<h4 class="service-details__bottom-title">Solutions & Findings</h4>
-											<p class="service-details__bottom-text">Duis aute irure dolor in repreh
-												enderit nulla voluptate velit.</p>
+											<p class="service-details__bottom-text">Cybersecurity is a rapidly evolving field that involves protecting computer systems, networks, and data from unauthorized access, theft, and damage.
+											</p>
 										</div>
 									</li>
 								</ul>
@@ -265,15 +258,15 @@
 									<div class="col-xl-6">
 										<div class="service-details__benefits-content">
 											<h3 class="service-details__benefits-title">Our Benefits</h3>
-											<p class="service-details__benefits-text">Duis aute irure dolor in simply
-												free text exist on reprehende voluptate velit esse cillum.</p>
+											<p class="service-details__benefits-text">As cybersecurity becomes increasingly important, organizations are looking for trusted partners to help them secure their systems and data. 
+												By providing reliable and effective cybersecurity services, you can build a strong reputation and attract new clients.</p>
 											<ul class="list-unstyled service-details__benefits-list">
 												<li>
 													<div class="icon">
 														<span class="icon-draw-check-mark"></span>
 													</div>
 													<div class="text">
-														<p>Nsectetur cing elit</p>
+														<p>Protection of sensitive data</p>
 													</div>
 												</li>
 												<li>
@@ -281,7 +274,7 @@
 														<span class="icon-draw-check-mark"></span>
 													</div>
 													<div class="text">
-														<p>Suspe ndisse suscip sagittis leo</p>
+														<p>Compliance with regulations</p>
 													</div>
 												</li>
 												<li>
@@ -289,7 +282,7 @@
 														<span class="icon-draw-check-mark"></span>
 													</div>
 													<div class="text">
-														<p>Entum estib dignissim posuere</p>
+														<p>Prevention of cyber attacks</p>
 													</div>
 												</li>
 												<li>
@@ -297,7 +290,7 @@
 														<span class="icon-draw-check-mark"></span>
 													</div>
 													<div class="text">
-														<p>If you are going to use a pass</p>
+														<p>Maintaining business continuity</p>
 													</div>
 												</li>
 											</ul>
@@ -314,40 +307,32 @@
 								<div class="accrodion-grp" data-grp-name="faq-one-accrodion">
 									<div class="accrodion active">
 										<div class="accrodion-title">
-											<h4>We Help to Create Visual Strategies</h4>
+											<h4>We Help to Create Better security implementation</h4>
 										</div>
 										<div class="accrodion-content">
 											<div class="inner">
-												<p>There are many variations of passages the majority have suffered
-													alteration in some fo injected humour, or randomised words
-													believable. There are many variations of passages of Lorem Ipsum
-													available, but the majority have suffered.</p>
+												<p>Our help is to focus on improving the implementation of security measures to enhance the overall security posture of organizations.
+													 The goal is to create a more effective and comprehensive approach to cybersecurity that can better protect against cyber threats and attacks.</p>
 											</div><!-- /.inner -->
 										</div>
 									</div>
 									<div class="accrodion">
 										<div class="accrodion-title">
-											<h4>digital and social markeitng expenses</h4>
+											<h4>Cyersecurity inplementation</h4>
 										</div>
 										<div class="accrodion-content">
 											<div class="inner">
-												<p>There are many variations of passages the majority have suffered
-													alteration in some fo injected humour, or randomised words
-													believable. There are many variations of passages of Lorem Ipsum
-													available, but the majority have suffered.</p>
+												<p>We put in place measures to protect an organization's systems, networks, and data from cyber threats.</p>
 											</div><!-- /.inner -->
 										</div>
 									</div>
 									<div class="accrodion last-chiled">
 										<div class="accrodion-title">
-											<h4>help to achieve marketing goals</h4>
+											<h4>help to achieve Security goals</h4>
 										</div>
 										<div class="accrodion-content">
 											<div class="inner">
-												<p>There are many variations of passages the majority have suffered
-													alteration in some fo injected humour, or randomised words
-													believable. There are many variations of passages of Lorem Ipsum
-													available, but the majority have suffered.</p>
+												<p>We continuously monitor your security posture and improve your security measures as needed.</p>
 											</div><!-- /.inner -->
 										</div>
 									</div>
