--- a/pages/mobile-applications.html
+++ b/pages/mobile-applications.html
@@ -165,7 +165,7 @@
 						<li><a href="services.html">Services</a></li>
 						<li class="active">services Details</li>
 					</ul>
-					<h2>Mobile Applications</h2>
+					<h2>IoTs</h2>
 				</div>
 			</div>
 		</section>
