removed some links and fixed some colors

--- a/index.html
+++ b/index.html
@@ -1249,7 +1249,7 @@
                                     </li>
                                 </ul>
                                 <h3 class="blog-one__title">
-                                    <a href="blog-details.html">Get few solutions to hire a best candidate</a>
+                                    <a href="./pages/blog-details.html">Get few solutions to hire a best candidate</a>
                                 </h3>
                                 <div class="blog-one__person">
                                     <div class="blog-one__person-img">
@@ -1281,7 +1281,7 @@
                                     </li>
                                 </ul>
                                 <h3 class="blog-one__title">
-                                    <a href="blog-details.html">Bring to the table win-win survival strategies</a>
+                                    <a href="./pages/blog-details.html">Bring to the table win-win survival strategies</a>
                                 </h3>
                                 <div class="blog-one__person">
                                     <div class="blog-one__person-img">
@@ -1313,7 +1313,7 @@
                                     </li>
                                 </ul>
                                 <h3 class="blog-one__title">
-                                    <a href="blog-details.html">Capitalize on low hanging fruit to identify a</a>
+                                    <a href="./pages/blog-details.html">Capitalize on low hanging fruit to identify a</a>
                                 </h3>
                                 <div class="blog-one__person">
                                     <div class="blog-one__person-img">
