--- a/pages/services2.html
+++ b/pages/services2.html
@@ -92,7 +92,7 @@
                                     <ul>
                                          
                                         <li><a href="services2.html">Services</a></li>
-                                        <li><a href="mobile-applications.html">IoTs</a></li>
+                                        <li><a href="mobile-applications.html">Mobile Application</a></li>
                                         <li><a href="digital-marketing.html">Networking & Cloud Infrastructure </a></li>
                                         <li><a href="graphic-design.html">Graphic Designing </a></li>
                                         <li><a href="website-development.html">Website Developments </a></li>
@@ -109,12 +109,12 @@
                                 </li>
                                  
                                 <li class="dropdown">
-                                    <a href="#">Blog</a>
-                                    <ul>
+                                    <a href="blog.html">Blog</a>
+                                    <!-- <ul>
                                         <li><a href="blog.html">Blog Posts</a></li>
                                         <li><a href="blog-sidebar.html">Blog Sidebar</a></li>
                                         <li><a href="blog-details.html">Blog Details</a></li>
-                                    </ul>
+                                    </ul> -->
                                 </li>
                                 <li><a href="contact.html">Contact</a></li>
                             </ul>
