--- a/pages/CyberSecurity.html
+++ b/pages/CyberSecurity.html
@@ -110,12 +110,12 @@
 								</li>
 								 
 								<li class="dropdown">
-									<a href="#">Blog</a>
-									<ul>
+									<a href="blog.html">Blog</a>
+									<!-- <ul>
 										<li><a href="blog.html">Blog Posts</a></li>
 										<li><a href="blog-sidebar.html">Blog Sidebar</a></li>
 										<li><a href="blog-details.html">Blog Details</a></li>
-									</ul>
+									</ul> -->
 								</li>
 								<li><a href="contact.html">Contact</a></li>
 							</ul>
