--- a/pages/contact.html
+++ b/pages/contact.html
@@ -109,12 +109,12 @@
                                 </li>
                                  
                                 <li class="dropdown">
-                                    <a href="#">Blog</a>
-                                    <ul>
+                                    <a href="blog.html">Blog</a>
+                                    <!-- <ul>
                                         <li><a href="blog.html">Blog Posts</a></li>
                                         <li><a href="blog-sidebar.html">Blog Sidebar</a></li>
                                         <li><a href="blog-details.html">Blog Details</a></li>
-                                    </ul>
+                                    </ul> -->
                                 </li>
                                 <li class="current"><a href="contact.html">Contact</a></li>
                             </ul>
