pictures & content editing

--- a/pages/why-choose.html
+++ b/pages/why-choose.html
@@ -494,7 +494,7 @@
                                 </div>
                                 <div class="business-growth-one__single-content">
                                     <h3><a href="#">Perfect Solution that your <br>Business Demands</a></h3>
-                                    <p>Evaluate the security features and compliance requirements of the solution.
+                                    <p>We Evaluate the security features and compliance requirements of the solution.
 									Ensure that it meets your business's security and compliance standards, and protects your data and sensitive information.</p>
                                 </div>
                             </div>
@@ -509,7 +509,7 @@
                                 </div>
                                 <div class="business-growth-one__single-content">
                                     <h3><a href="#">Perfect Solution that your <br>Business Demands</a></h3>
-                                    <p>Consider the reliability and support provided by the solution's vendor or provider. 
+                                    <p>We Consider the reliability and support provided by the solution's vendor or provider. 
 									Evaluate their reputation, customer reviews, and track record in delivering quality solutions and providing timely support and maintenance.</p>
                                 </div>
                             </div>
@@ -524,7 +524,7 @@
                                 </div>
                                 <div class="business-growth-one__single-content">
                                     <h3><a href="#">Perfect Solution that your <br>Business Demands</a></h3>
-                                    <p>Evaluate how the solution will integrate with your existing systems, processes, and workflows.
+                                    <p>We evaluate how the solution will integrate with your existing systems, processes, and workflows.
 									Ensure that it is compatible with your current technology stack and infrastructure, and consider any potential challenges or complexities in implementation.</p>
                                 </div>
                             </div>
